updated package build

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gillhawkes",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --no-progress",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
