--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gillhawkes",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --omit=dev --no-progress --yes",
+    "build": "ng build --no-progress",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
