--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.8",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --no-watch --port 3002",
     "build": "ng build --no-progress",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
