--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gillhawkes",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --no-watch --port 3002",
-    "build": "ng build --no-progress",
+    "start": "ng serve",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
