--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "start-server": "/var/www/gillhawkes.com/public_html/gillhawkes/start-server.sh"
   },
   "private": true,
   "dependencies": {
